# Snake-game

./: CMakeLists.txt
include/: main.h  screen.cpp  screen.h
src/: main.cpp
